DZ_13/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary-service
spec:
  selector:
    app: nginx-canary  # выбирает поды с app=nginx-canary (обе версии)
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
